argo/networkpolicy-argocd-redis.yaml
# Source: argocd
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: redis
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.2
  name: argocd-redis
  namespace: argo
  annotations:
    noa.re/manifest-id: 6dbfd0b98de41595
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
          app.kubernetes.io/instance: argocd
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-repo-server
          app.kubernetes.io/instance: argocd
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
          app.kubernetes.io/instance: argocd
    ports:
    - port: redis
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
      app.kubernetes.io/instance: argocd
  policyTypes:
  - Ingress
